# ps1-nogs

./: CMakeLists.txt  Makefile
assets/tim/: capmv.tim  cappy.tim  cappy.tpj  crash.tpj  level_1.tpj  pillar.tim  psyduck.tim  raichu.tim  ship.tim  skybox.tim  tree.tim
legacy/: CdReader.c  CdReader.h  CollisionHandler.c  Frames.c  Frames.h  GPUBase.c  GPUBase.h  GameObject.c  GameObject.h  TextBox.c  TextBox.h  TileFetcher.c  TxtHandler.c  TxtHandler.h
lib/: Animation.c  Animation.h  AssetManager.c  AssetManager.h  CD.c  CD.h  CdReader.c  Controller.c  Controller.h  DPad.h  GPU.c  GPU.h  GTE.c  GTE.h  GameObject.c  GameObject.h  Graphics.c  Graphics.h  Heap.c  Heap.h  JSONParser.c  JSONParser.h  Log.h  Logger.c  Logger.h  MemUtils.h  PrimBuff.c  PrimBuff.h  SoundEffect.h  StrUtils.h  Tiled.c  Tiled.h
projects/hello-animation/: Main.c  Makefile  isoconfig.xml
projects/hello-controllers/: Main.c
projects/hello-debug-font/: Main.c
projects/hello-fixed-point/: Main.c
projects/hello-fixed-point-math/: Main.c
projects/hello-flat-shaded-polys/: Main.c
projects/hello-gte-1/: Main.c  Makefile  isoconfig.xml
projects/hello-gte-2/: Main.c  Makefile  isoconfig.xml
projects/hello-rotating-polys/: Main.c  Makefile  isoconfig.xml
projects/hello-textured-sprites/: Main.c  isoconfig.xml
projects/rotating-cube/: Main.c  Makefile  isoconfig.xml
projects/template/: Main.c  isoconfig.xml
tools/: mkpsxiso-2.04-Linux.deb
